--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,11 +25,14 @@ dependencies:
     sdk: flutter
   ionicons: ^0.1.2
   http: ^0.13.3
+  #web_vuw:
+  webview_flutter: ^2.0.9
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  share: ^2.0.4
 
 dev_dependencies:
   flutter_test:
